# htmdec_formats

./: .travis.yml  Makefile  pyproject.toml  requirements_dev.txt  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: build-test.yaml  release.yml
src/htmdec_formats/: __init__.py  arpes_formats.py  cli.py  htmdec_formats.py  indenter_formats.py  indenter_types.py  keyence_formats.py
src/htmdec_formats/ksy_files/: dotnetlist.py  nmdfile.py  pxtfile.ksy  simple-xls.ksy  simple_xls.py  vk4.ksy  vk4.py
tests/: test_htmdec_formats.py
